<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".view.InputFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berat_badan"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edt_berat_badan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/input_berat_badan"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinggi_badan"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edt_tinggi_badan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/input_tinggi_badan"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/btn_hitung_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_bmi"/>

</LinearLayout>